--- a/src/components/home/HeroVideo/HeroVideo.css
+++ b/src/components/home/HeroVideo/HeroVideo.css
@@ -8,7 +8,7 @@
   flex-flow: column nowrap;
   position: relative;
   height: 650px;
-  background-color: black;
+  background-color: blue;
 }
 
 .hero-video {
