--- a/src/components/common/footer/Footer.css
+++ b/src/components/common/footer/Footer.css
@@ -1,146 +1,111 @@
-.gpt3__footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  background: var(--color-footer);
-}
-
-.gpt3__footer-heading {
+footer {
   width: 100%;
-  text-align: center;
-
-  margin-bottom: 3rem;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  box-shadow: 0 16px 70px -8px rgba(0, 0, 0, 0.25);
+  border-radius: 20px 20px 0 0;
+  transition: background 0.3s linear;
 }
 
-.gpt3__footer-heading h1 {
-  font-family: var(--font-family);
-  font-weight: 800;
-  font-size: 64px;
-  line-height: 75px;
+.container-footer {
+  max-width: 1240px;
+  padding: 30px 40px;
+  margin: auto;
 }
 
-.gpt3__footer-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 1rem;
-  border: 1px solid #fff;
-  text-align: center;
-
-  margin-bottom: 10rem;
-  cursor: pointer;
-}
-
-.gpt3__footer-btn p {
-  font-size: 18px;
-  font-family: var(--font-family);
-  line-height: 21px;
-  color: #fff;
-  word-spacing: 2px;
-}
-
-.gpt3__footer-links {
+.content-footer {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-
-  width: 100%;
-  text-align: left;
-}
-
-.gpt3__footer-links div {
-  width: 250px;
-  margin: 1rem;
-}
-
-.gpt3__footer-links_logo {
-  display: flex;
-  flex-direction: column;
-}
-
-.gpt3__footer-links_logo img {
-  width: 118px;
-  height: 30px;
-
+  align-items: center;
   margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_logo p {
-  font-family: var(--font-family);
-  font-size: 12px;
-  line-height: 15px;
-  color: #fff;
-}
-
-.gpt3__footer-links_div {
+.profile .logo-area {
   display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_div h4 {
-  font-size: 14px;
-  line-height: 17px;
-  font-family: var(--font-family);
-  color: #fff;
-
-  margin-bottom: 0.9rem;
+.profile .logo-area img {
 }
 
-.gpt3__footer-links_div p {
-  font-size: 12px;
-  line-height: 15px;
-  font-family: var(--font-family);
-  color: #fff;
-
-  margin: 0.5rem 0;
-  cursor: pointer;
+.desc-area {
+  max-width: 320px;
+  margin-bottom: 1.25rem;
 }
 
-.gpt3__footer-copyright {
-  margin-top: 2rem;
-  text-align: center;
-  width: 100%;
+.desc-area p {
+  color: var(--light-grey);
+  font-weight: 400;
+  line-height: 28px;
 }
 
-.gpt3__footer-copyright p {
-  font-size: 12px;
-  font-family: var(--font-family);
-  line-height: 15px;
-  color: #fff;
+.social-media a {
+  color: var(--light-grey);
+  margin-right: 22px;
+  font-size: 24px;
 }
 
-@media screen and (max-width: 850px) {
-  .gpt3__footer-heading h1 {
-    font-size: 44px;
-    line-height: 50px;
-  }
+.social-media a:hover {
+  color: var(--lighter-grey);
+  transition: all ease-in-out 0.3s;
 }
 
-@media screen and (max-width: 550px) {
-  .gpt3__footer-heading h1 {
-    font-size: 34px;
-    line-height: 42px;
-  }
-
-  .gpt3__footer-links div {
-    margin: 1rem 0;
-  }
-
-  .gpt3__footer-btn p {
-    font-size: 14px;
-    line-height: 20px;
-  }
+.service-area {
+  display: flex;
 }
 
-@media screen and (max-width: 400px) {
-  .gpt3__footer-heading h1 {
-    font-size: 27px;
-    line-height: 38px;
-  }
+.service-header {
+  margin-right: 40px;
+}
+
+li.service-name {
+  color: var(--white-color);
+  font-weight: 600;
+}
+
+.service-header li a {
+  color: var(--light-grey);
+  padding-bottom: 1px;
+  font-weight: 400;
+}
+.service-header li {
+  margin-bottom: 10px;
+}
+
+hr {
+  height: 1px;
+  border: none;
+  background-color: var(--light-grey);
+  margin-bottom: 1rem;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.875rem;
+}
+
+.copy-right {
+  color: var(--light-grey);
+  display: flex;
+  align-items: center;
+}
+
+.copy-right span {
+  margin-left: 8px;
+  font-weight: 400;
+  letter-spacing: 0.135rem;
+}
+
+.tou a {
+  color: var(--light-grey);
+  margin-left: 1.5rem;
+}
+
+.tou a:hover {
+  color: var(--lighter-grey);
+  transition: all ease-in-out 0.3s;
 }
