--- a/src/components/home/Services/Services.css
+++ b/src/components/home/Services/Services.css
@@ -1,3 +1,163 @@
-.text {
+.services-container {
+  box-sizing: border-box;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 70px;
+}
+
+.services-left {
+  flex: 1;
+  padding-right: 20px;
+}
+
+.services-left h2 {
+  letter-spacing: 0.135rem;
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: var(--lighter-grey);
+}
+
+.services-left h3 {
+  font-size: 50px;
+  margin-bottom: 5px;
   color: white;
+}
+
+.services-left h4 {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: var(--light-grey);
+  cursor: pointer;
+  margin-top: 30px;
+  font-weight: 300;
+}
+
+.services-left h4::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  margin-bottom: -5px;
+  background-color: var(--light-red);
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.6s;
+  transition-duration: 0.6s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  cursor: pointer;
+}
+
+.services-left h4:hover {
+  color: var(--light-red);
+  transition: all ease-in-out 0.6s;
+  cursor: pointer;
+}
+
+.services-left h4:hover span::before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  color: var(--light-red);
+  cursor: pointer;
+}
+
+.services-left h4 span {
+  display: flex;
+  margin-left: 10px;
+}
+
+.services-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.service-card {
+  flex: 1;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  opacity: 0.75;
+  cursor: pointer;
+}
+
+.service-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  background: rgb(0, 0, 0, 0.9);
+  opacity: 0.9;
+  cursor: pointer;
+}
+.service-card:hover {
+  box-shadow: 0px 5px 15px 0px var(--light-red);
+  transition: all ease-in 0.4s;
+}
+
+.service-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.service-card h5 {
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.8em;
+  color: white;
+}
+
+/* Responsive düzenlemeler */
+@media screen and (max-width: 768px) {
+  .services-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .services-left {
+    margin-bottom: 20px;
+    padding-right: 0;
+  }
+
+  .services-right {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .service-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%; /* Kartları mobil cihazlarda tam genişlikte göster */
+  }
+
+  .service-card img {
+    height: 200px; /* Fotoğraf yüksekliğini artır */
+  }
 }
