--- a/src/components/home/SliderSlick/SliderSlick.css
+++ b/src/components/home/SliderSlick/SliderSlick.css
@@ -3,6 +3,31 @@
   max-width: 1300px;
   margin: 0 auto;
 }
+
+.slick-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--lighter-grey);
+  font-size: 18px;
+  margin-bottom: 20px;
+  font-weight: 500;
+  line-height: 1.3em;
+}
+
+.slick-subtitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--white-color);
+  font-size: 50px;
+  font-weight: 600;
+  margin-bottom: 130px;
+  line-height: 1.3em;
+}
+
 .slider {
   width: 100%;
   height: 400px;
@@ -12,6 +37,7 @@
 .slide img {
   width: 100%;
   height: 350px;
+  cursor: pointer;
 }
 
 .slide {
@@ -37,4 +63,13 @@
 .dot-active {
   box-shadow: 0 0 15px 4px var(#ffffff);
   background: var(--red-color);
+}
+
+@media screen and (max-width: 768px) {
+  .slick-header {
+    font-size: 14px;
+  }
+  .slick-subtitle {
+    font-size: 42px;
+  }
 }
