--- a/src/components/home/Testimons/Testimons.css
+++ b/src/components/home/Testimons/Testimons.css
@@ -1,3 +1,81 @@
-.text {
+.padding {
+  padding: 80px 0;
+}
+
+.grid2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.testimons-container {
+  max-width: 85%;
+  margin: auto;
+}
+
+.testimonal .items {
+  padding: 30px;
+  transition: 0.5s;
+  border-radius: 15px;
+}
+
+.testimonal .img {
+  position: relative;
+}
+.box {
+  display: flex;
+}
+
+.testimonal img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.testimonal i {
+  position: absolute;
+  bottom: 0;
+  left: 60px;
+  background-color: var(--light-red);
+  color: #fff;
+}
+.testimonal .name {
+  margin: 25px;
   color: white;
+}
+.testimonal .name h2 {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.testimonal .name span {
+  color: var(--light-grey);
+}
+.testimonal p {
+  margin-top: 20px;
+  color: grey;
+  transition: 0.5s;
+}
+.testimonal .items:hover {
+  background-color: var(--light-red);
+  color: #fff;
+  cursor: pointer;
+  transition: all ease-in-out 0.5s;
+}
+.testimonal .items:hover span,
+.testimonal .items:hover p {
+  color: #fff;
+}
+.testimonal .items:hover .i {
+  background-color: #fff;
+  color: var(--light-red);
+}
+
+@media screen and (max-width: 768px) {
+  .grid2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
